{{$NEXT}}

          Tweak the license text to play well with Dist::Zilla

          Drop a bunch of apparently-unnecessary dependencies. Now only
          support Perl 5.8.0+

1.001     2011-01-14 21:34:31 America/Toronto

          Add dependency on Software::License (thanks CPAN Testers!)

1.000     2011-01-13 20:10:09 America/Toronto

          This is the initial release.